--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<url>http://microservices.linkeddata.es/stemming/</url>
 	<organization>
 		<name>Ontology Engineering Group</name>
-		<url>http://www.oeg-upm.net/</url>
+		<url>http://www.oeg-upm.net</url>
 	</organization>
 	<licenses>
 		<license>
