--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.upm.oeg</groupId>
-	<artifactId>oeg-stemming-build</artifactId>
+	<artifactId>oeg-stemming</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>OEG Stemming Build</name>
-	<description>OEG Stemming Build</description>
+	<name>OEG Stemming</name>
+	<description>OEG Stemming</description>
 	<url>http://microservices.linkeddata.es/stemming/</url>
 	<organization>
 		<name>Ontology Engineering Group</name>
@@ -78,7 +78,7 @@
 	<dependencyManagement>
 		<dependencies>
 
-			<!-- Workflow -->
+			<!-- Camel Workflow -->
 	        <dependency>
 	            <groupId>org.apache.camel</groupId>
 	            <artifactId>camel-core</artifactId>
@@ -100,14 +100,12 @@
 	            <version>${spring.version}</version>
 	        </dependency>
 
-	        <!-- API Doc -->
-	        <dependency>
-	            <groupId>org.apache.camel</groupId>
-	            <artifactId>camel-swagger</artifactId>
-	            <version>${camel.version}</version>
-	        </dependency>
-
-	        <!-- REST -->
+	        <!-- API REST -->
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-swagger</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
 	        <dependency>
 	            <groupId>org.apache.camel</groupId>
 	            <artifactId>camel-servlet</artifactId>
