--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
         <groupId>es.upm.oeg</groupId>
         <artifactId>oeg-stemming</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 	
 	<artifactId>oeg-stemming-lib</artifactId>
